ccenter/main/default/objects/Product2/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location that a product is inventoried at.  This location will be used to generate the distribution sheet for households</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rack 1</fullName>
            </value>
            <value>
                <fullName>Rack 2</fullName>
            </value>
            <value>
                <fullName>Rack 3</fullName>
            </value>
            <value>
                <fullName>Rack 4</fullName>
            </value>
            <value>
                <fullName>Rack 5</fullName>
            </value>
            <value>
                <fullName>Rack 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>