ccenter/main/default/objects/Product2/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>The cost that the distribution site paid to receive the donation.</description>
    <inlineHelpText>Enter what was actually paid for the product received.</inlineHelpText>
    <label>Product Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>