ccenter/main/default/objects/Product2/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <description>The value of the product.  This will allow a distribution site to track the value of the food they have distributed, independent of what they paid for it.   Can also be used to provide tax exemption receipts for donors.</description>
    <inlineHelpText>Enter the value of the product or what the distribution site would have had to pay for the product.</inlineHelpText>
    <label>Product Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>