ccenter/main/default/objects/Product2/fields/Quantity_Onhand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Onhand__c</fullName>
    <description>Inventory amount onhand for a product</description>
    <label>Quantity Onhand</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>