ccenter/main/default/objects/Product2/recordTypes/Calvary_Cares_Product.recordType-meta.xml
<RecordType>
    <fullName>Calvary_Cares_Product</fullName>
    <active>true</active>
    <description>Products for the Calvary Cares Center</description>
    <label>Calvary Cares Product</label>
</RecordType>