ccenter/main/default/objects/Product2/recordTypes/Care_Center_Inventory.recordType-meta.xml
<RecordType>
    <fullName>Care_Center_Inventory</fullName>
    <active>true</active>
    <description>Inventory for a Distribtuion Site or Care Center</description>
    <label>Care Center Inventory</label>
</RecordType>